--- a/GeeksNearby-mobile/ios/GeeksNearby/Cordova.plist
+++ b/GeeksNearby-mobile/ios/GeeksNearby/Cordova.plist
@@ -13,7 +13,7 @@
 	<key>AutoHideSplashScreen</key>
 	<true/>
 	<key>ShowSplashScreenSpinner</key>
-	<false/>
+	<true/>
 	<key>MediaPlaybackRequiresUserAction</key>
 	<false/>
 	<key>AllowInlineMediaPlayback</key>
