--- a/GeeksNearby-mobile/ios/GeeksNearby/GeeksNearby-Info.plist
+++ b/GeeksNearby-mobile/ios/GeeksNearby/GeeksNearby-Info.plist
@@ -9,29 +9,20 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Icon.png</string>
-	<key>CFBundleIconFiles</key>
-	<array>
-		<string>iphone.png</string>
-		<string>iphone@2x.png</string>
-		<string>icon-72.png</string>
-		<string>icon-72@2x.png</string>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
-	</array>
+	<string>icon.png</string>
 	<key>CFBundleIcons</key>
 	<dict>
 		<key>CFBundlePrimaryIcon</key>
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>iphone.png</string>
-				<string>iphone@2x.png</string>
+				<string>icon.png</string>
+				<string>icon@2x.png</string>
 				<string>icon-72.png</string>
 				<string>icon-72@2x.png</string>
-				<string>Icon.png</string>
-				<string>Icon@2x.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
